--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -16,4 +16,5 @@
 @import "../styles/layout/body";
 @import "../styles/layout/home";
 @import "../styles/layout/about";
-@import "../styles/layout/aside";            
+@import "../styles/layout/aside";
+@import "../styles/layout/footer";
