--- a/styles/layout/_aside.scss
+++ b/styles/layout/_aside.scss
@@ -2,7 +2,7 @@
     // Dark mode
     $border-dark: #252525;
     $bg-dark: #131313;
-    padding: em(20);
+    padding: em(26);
     margin-top: em(20);
     border-top: 1px solid $border-light;
     text-align: center;
@@ -18,9 +18,12 @@
     &-link{
         font-size: em(12);
         border-bottom: 1px dotted transparent;
-        &:hover{
-            border-bottom: 1px dotted;
+        img{
+            width: 25px;
         }
+        // &:hover{
+        //     border-bottom: 1px dotted;
+        // }
     }
     @include bp(768){
         position: absolute;
