--- a/codepen/cursor-eater/css/style.css
+++ b/codepen/cursor-eater/css/style.css
@@ -12,19 +12,17 @@ body {
   display: flex;
 }
 
-button {
-  -webkit-animation-name: shake;
-          animation-name: shake;
-  -webkit-animation-duration: 0.6s;
-          animation-duration: 0.6s;
-  -webkit-animation-iteration-count: 1;
-          animation-iteration-count: 1;
-  -webkit-animation-timing-function: linear;
-          animation-timing-function: linear;
-  -webkit-animation-delay: 500ms;
-          animation-delay: 500ms;
-  -webkit-animation-play-state: paused;
-          animation-play-state: paused;
+.overlay {
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border: 0;
+  position: fixed;
+  z-index: -1;
+  pointer-events: none;
+}
+
+.bin {
   background-image: repeating-linear-gradient(to right, transparent, transparent 5px, #000000 5px, #000000 7px, transparent 7px);
   background-size: 11px 24px;
   background-position: 2px 13px;
@@ -40,7 +38,7 @@ button {
   border-radius: 0 0 6px 6px;
 }
 
-button::after, button::before {
+.bin::after, .bin::before {
   content: '';
   position: absolute;
   -webkit-transform-origin: left bottom;
@@ -49,7 +47,7 @@ button::after, button::before {
   transition: 200ms ease-in-out;
 }
 
-button::after {
+.bin::after {
   left: -4px;
   top: -5px;
   border-width: 2px;
@@ -63,7 +61,7 @@ button::after {
   border-radius: 5px 5px 0 0;
 }
 
-button::before {
+.bin::before {
   top: -8px;
   border-width: 2px;
   border-style: solid;
@@ -75,41 +73,42 @@ button::before {
   margin: auto;
 }
 
-button:focus, button:active {
-  -webkit-animation-play-state: running;
-          animation-play-state: running;
+.bin:focus ~ .overlay, .bin:active ~ .overlay {
+  pointer-events: inherit;
+  z-index: 2;
+  cursor: none;
 }
 
-button:focus ~ div > small, button:active ~ div > small {
+.bin:focus ~ div > small, .bin:active ~ div > small {
   opacity: 1;
   -webkit-animation: throw 300ms 30ms cubic-bezier(0.215, 0.61, 0.355, 0.3) forwards;
           animation: throw 300ms 30ms cubic-bezier(0.215, 0.61, 0.355, 0.3) forwards;
 }
 
-button:focus, button:active {
+.bin:focus, .bin:active {
   outline: none;
   cursor: none;
 }
 
-button:focus::before, button:focus::after, button:active::before, button:active::after {
+.bin:focus::before, .bin:focus::after, .bin:active::before, .bin:active::after {
   -webkit-transform-origin: left bottom;
           transform-origin: left bottom;
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
 }
 
-button:focus::before, button:active::before {
+.bin:focus::before, .bin:active::before {
   top: -18px;
   left: -23px;
   right: 3px;
 }
 
-button:focus ~ div, button:active ~ div {
+.bin:focus ~ div, .bin:active ~ div {
   cursor: none;
   z-index: 1;
 }
 
-button:focus ~ div:hover, button:active ~ div:hover {
+.bin:focus ~ div:hover, .bin:active ~ div:hover {
   cursor: none;
 }
 
@@ -255,48 +254,6 @@ div > small > i::after {
     -webkit-transform: translate(-30px, -20px) rotate(-80deg) scale(0.4);
             transform: translate(-30px, -20px) rotate(-80deg) scale(0.4);
     opacity: 0;
-  }
-}
-
-@-webkit-keyframes shake {
-  0% {
-    -webkit-transform: translate(2px, 1px) rotate(0deg);
-  }
-  10% {
-    -webkit-transform: translate(-1px, -2px) rotate(-1deg);
-  }
-  20% {
-    -webkit-transform: translate(-3px, 0px) rotate(1deg);
-  }
-  30%, 40%, 50% {
-    -webkit-transform: translate(0px, 2px) rotate(0deg);
-  }
-  70%, 80%, 90% {
-    -webkit-transform: translate(2px, 1px) rotate(-1deg);
-  }
-  100% {
-    -webkit-transform: translate(1px, -2px) rotate(-1deg);
-  }
-}
-
-@keyframes shake {
-  0% {
-    -webkit-transform: translate(2px, 1px) rotate(0deg);
-  }
-  10% {
-    -webkit-transform: translate(-1px, -2px) rotate(-1deg);
-  }
-  20% {
-    -webkit-transform: translate(-3px, 0px) rotate(1deg);
-  }
-  30%, 40%, 50% {
-    -webkit-transform: translate(0px, 2px) rotate(0deg);
-  }
-  70%, 80%, 90% {
-    -webkit-transform: translate(2px, 1px) rotate(-1deg);
-  }
-  100% {
-    -webkit-transform: translate(1px, -2px) rotate(-1deg);
   }
 }
 /*# sourceMappingURL=style.css.map */
