--- a/codepen/cursor-eater/css/style.css
+++ b/codepen/cursor-eater/css/style.css
@@ -23,18 +23,22 @@ body {
 }
 
 .bin {
-  background-image: repeating-linear-gradient(to right, transparent, transparent 5px, #000000 5px, #000000 7px, transparent 7px);
-  background-size: 11px 24px;
-  background-position: 2px 13px;
+  --black: #000000;
+  --binbg: #e6e6e6;
+  --width: 40px;
+  --height: 50px;
+  background-image: repeating-linear-gradient(to right, transparent, transparent 5px, var(--black) 5px, var(--black) 7px, transparent 7px);
+  background-size: 11px calc(var(--height) / 2);
+  background-position: 2px center;
   background-repeat: repeat-x;
   margin: auto;
   position: relative;
-  background-color: #e6e6e6;
+  background-color: var(--binbg);
   border: 0;
   color: transparent;
-  width: 40px;
-  height: 50px;
-  border: 2px solid black;
+  width: var(--width);
+  height: var(--height);
+  border: 2px solid var(--black);
   border-radius: 0 0 6px 6px;
 }
 
@@ -45,44 +49,28 @@ body {
           transform-origin: left bottom;
   -webkit-transition: 200ms ease-in-out;
   transition: 200ms ease-in-out;
+  border-width: 2px;
+  border-style: solid;
+  margin: auto;
+  right: 0;
 }
 
 .bin::after {
   left: -4px;
   top: -5px;
-  border-width: 2px;
-  border-style: solid;
   height: 7px;
-  width: 40px;
-  border: 2px solid black;
-  margin: auto;
-  right: 0;
-  background-color: #e6e6e6;
+  width: var(--width);
+  border: 2px solid var(--black);
+  background-color: var(--binbg);
   border-radius: 5px 5px 0 0;
 }
 
 .bin::before {
   top: -8px;
-  border-width: 2px;
-  border-style: solid;
   height: 2px;
   width: 10px;
-  border-color: black black transparent black;
+  border-color: var(--black) var(--black) transparent var(--black);
   left: 0;
-  right: 0;
-  margin: auto;
-}
-
-.bin:focus ~ .overlay, .bin:active ~ .overlay {
-  pointer-events: inherit;
-  z-index: 2;
-  cursor: none;
-}
-
-.bin:focus ~ div > small, .bin:active ~ div > small {
-  opacity: 1;
-  -webkit-animation: throw 300ms 30ms cubic-bezier(0.215, 0.61, 0.355, 0.3) forwards;
-          animation: throw 300ms 30ms cubic-bezier(0.215, 0.61, 0.355, 0.3) forwards;
 }
 
 .bin:focus, .bin:active {
@@ -112,6 +100,18 @@ body {
   cursor: none;
 }
 
+.bin:focus ~ .overlay, .bin:active ~ .overlay {
+  pointer-events: inherit;
+  z-index: 2;
+  cursor: none;
+}
+
+.bin:focus ~ div > small, .bin:active ~ div > small {
+  opacity: 1;
+  -webkit-animation: throw 300ms 30ms cubic-bezier(0.215, 0.61, 0.355, 0.3) forwards;
+          animation: throw 300ms 30ms cubic-bezier(0.215, 0.61, 0.355, 0.3) forwards;
+}
+
 div {
   position: fixed;
   width: 100%;
@@ -138,35 +138,37 @@ div > small {
   opacity: 0;
 }
 
-div > small::before {
+div > small::before, div > small::after {
   content: '';
+  position: absolute;
+  width: 1px;
   border-right: 1px solid black;
+}
+
+div > small::before {
   height: 17px;
   -webkit-transform: rotate(-42deg);
           transform: rotate(-42deg);
-  width: 1px;
-  position: absolute;
   top: -3px;
   right: 13px;
 }
 
 div > small::after {
-  content: '';
-  border-right: 1px solid black;
   height: 4px;
   -webkit-transform: rotate(-112deg);
           transform: rotate(-112deg);
-  width: 1px;
-  position: absolute;
   top: 18px;
   right: 11px;
 }
 
-div > small > i::before {
+div > small > i::before, div > small > i::after {
   content: '';
   position: absolute;
-  border-left: 1px solid black;
   border-top: 1px solid black;
+}
+
+div > small > i::before {
+  border-left: 1px solid black;
   width: 4px;
   bottom: -4px;
   height: 4px;
@@ -175,10 +177,7 @@ div > small > i::before {
 }
 
 div > small > i::after {
-  content: '';
-  position: absolute;
   border-right: 1px solid black;
-  border-top: 1px solid black;
   width: 5px;
   bottom: -2px;
   height: 5px;
