--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -4,7 +4,7 @@ $roboto-normal: 400;
 $roboto-medium-italic: 500i;
 $roboto-bold: 700;
 
-$purple: #673AB7;
+$dark: #181818;
 $border-light: #ededed;
 $gray: #444;
 $gray2: #353535;
