--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -1,17 +1,13 @@
-.Footer{
-    position: fixed;
-    right: 20px;
-    bottom: 10px;
-    display: none;
-    @include bp(992){
-        display: block;
-    }
-    > small{
-        color: darkgray;
-    }
+footer{
+    display: flex;
+    justify-content: center;
     a{
+        color: white;
         &:hover{
             border-bottom: 1px dotted;
+        }
+        + a{
+            margin-left: em(40);
         }
     }
 }
