--- a/styles/layout/_home.scss
+++ b/styles/layout/_home.scss
@@ -1,109 +1,43 @@
-.Section-Heading{
-    > h1{
-        font-weight: 100;
-        margin-bottom: em(15);
-        @include bp(768){
-            margin: 0;
-            font-size: 48px;
-            width: 420px;
-            line-height: 1.3;
-        }
-        @include bp(992){
-            width: auto;
-        }
+.Home{
+    position: relative;
+    // background-image: radial-gradient(white -5px, black 1px);
+    // background-size: 3% 35%;
+    // background-repeat: repeat;
+    // background-position: 25% -807px;
+}
+.Logo-css{
+    $w: em(25);
+    $h: em(100);
+    $br: 0px 0px 10px 0px white;
+    width: $w;
+    height: $h;
+    border-radius: $w;
+    background-color: white;
+    margin: auto;
+    position: relative;
+    box-shadow: $br;
+    top: em(-50);
+    &::before,
+    &::after{
+        content: '';
+        position: absolute;
+    }
+    &::before{
+        bottom: calc(#{$w} / 2);
+        height: calc(#{$h} - 60px);
+        width: $w;
+        border-radius: $w;
+        left: calc(-#{$w} + -5px);
+        background-color: ghostwhite;
+        box-shadow: $br;
+    }
+    &::after{
+        left: calc(#{$w} + 5px);
+        width: calc(#{$w} / 2);
+        height: $w;
+        border-radius: 0 $w $w 0;
+        background-color: ghostwhite;
+        box-shadow: $br;
+        top: calc(#{$w} / 2);
     }
 }
-
-.Hero{
-    // Dark mode
-    $border-dark: #252525;
-    @include bp(768){
-        flex: 1 100%;
-        border-bottom: 1px solid $border-light;
-        padding-left: em(40);
-        padding-bottom: em(40);
-        .dark &{
-            border-bottom: 1px solid $border-dark;
-        }
-    }
-    @include bp(992){
-        padding-left: em(70);
-        padding-bottom: em(50);
-    }
-}
-
-.Col{
-    > p{
-        font-size: 20px;
-        font-weight: $roboto-thin;
-        line-height: 1.7;
-    }
-    > .Link-medium{
-        margin-top: 10px;
-        display: inline-block;
-    }
-    > .mt{
-        margin-top: em(30);
-    }
-    @include bp(768){
-        // flex: 1 50%; // will not work if applied in IE11
-        width: 50%;
-        padding: em(40);
-        > .Link-medium{
-            margin-top: em(30);
-        }
-        &:not(:last-child){
-            text-align: right;
-            > p{
-                font-size: em(24);
-            }
-        }
-        &.mt{
-            // Dark mode
-            $border-dark: #252525;
-            margin-top: 0;
-            height: calc(100vh - 295px);
-            border-left: 1px solid $border-light;
-            .dark &{
-                border-left: 1px solid $border-dark;
-            }
-        }
-    }
-    @include bp(992){
-        padding: em(50);
-        &.mt{
-            height: calc(100vh - 245px);
-        }
-    }
-}
-
-.List{
-    margin-top: em(30);
-    > * + *{
-        margin-top: em(30);
-    }
-    &-item{
-        > strong{
-            margin-top: 10px;
-            display: block;
-            font-size: 18px;
-            .dark &{
-                color: darkgray;
-            }
-        }
-        > p{
-            margin-top: 10px;
-            font-weight: 500;
-            + p{
-                font-weight: 300;
-            }
-        }
-    }
-    @include bp(992){
-        margin-top: em(50);
-        > * + *{
-            margin-top: em(50);
-        }
-    }
-}
-
