--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -23,7 +23,7 @@ import SocialMedia from "./SocialMedia.astro";
       <Link
         url="/work"
         text="View Portfolio"
-        className="cta"
+        className="cta animTrigger"
         title="View Portfolio"
       />
       <SocialMedia />
