--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,5 +1,5 @@
 <nav class="navigation">
-  <a class="link" href="/" title="Hi">
+  <a class="link animTrigger" href="/" title="Hi">
     <div class="logo">
       <svg
         width="32"
@@ -39,6 +39,9 @@
     align-items: center;
     justify-content: space-between;
     padding: rem(10);
+    .logo{
+      pointer-events: none; // tf is this bug!!!, wrapping anchor is not clickable!
+    }
   }
   .navigation > a:not(:first-child) {
     color: var(--c-gray-300);
