--- a/src/components/PortfolioDetails.astro
+++ b/src/components/PortfolioDetails.astro
@@ -22,7 +22,7 @@ const { responsibilities, title, imgSrcfull, link, description, builtwith } =
 <div class="project-container">
   <header>
     <Link
-      className="flex-row-reverse"
+      className="flex-row-reverse animTrigger"
       url="/work"
       text="back to portfolio"
       title="back to portfolio"
