--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,4 +20,29 @@
   }
 </style>
 
+<script defer>
+  window.onload = () => {
+    const anchors = document.querySelectorAll("a");
+    const transition_el = document.querySelector(".anim");
 
+    setTimeout(() => {
+      transition_el.classList.remove("blur");
+    }, 500);
+
+    for (let i = 0; i < anchors.length; i++) {
+      const anchor = anchors[i];
+
+      anchor.addEventListener("click", (e) => {
+        e.preventDefault();
+        let target = e.target;
+        if (!target.classList.contains("animTrigger")) return;
+
+        transition_el.classList.add("blur");
+
+        setInterval(() => {
+          window.location.href = target;
+        }, 500);
+      });
+    }
+  };
+</script>
