--- a/src/components/PortfolioContainer.astro
+++ b/src/components/PortfolioContainer.astro
@@ -2,7 +2,7 @@
 import WorkList from "./WorkList.astro";
 ---
 
-<main class="main-container">
+<main class="main-container blur anim">
   <WorkList />
 </main>
 
