--- a/src/components/MainContainer.astro
+++ b/src/components/MainContainer.astro
@@ -2,7 +2,7 @@
 import TopFold from "./TopFold.astro";
 ---
 
-<main class="main-container">
+<main class="main-container blur anim">
   <TopFold />
 </main>
 
