--- a/src/layouts/Splash.astro
+++ b/src/layouts/Splash.astro
@@ -26,7 +26,7 @@ import Footer from "../components/Footer.astro";
     </style>
   </head>
   <body>
-    <div class="container-grid blur anim">
+    <div class="container-grid">
       <Header />
       <slot />
       <Footer />
