--- a/src/layouts/Work.astro
+++ b/src/layouts/Work.astro
@@ -4,7 +4,7 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import PortfolioDetails from "../components/PortfolioDetails.astro";
 const MainEl = "main";
-const MainClass = "main-container";
+const MainClass = "main-container blur anim";
 const { title, imgSrcfull, link, description, responsibilities, builtwith } =
   Astro.props.frontmatter || Astro.props;
 ---
@@ -41,7 +41,7 @@ const { title, imgSrcfull, link, description, responsibilities, builtwith } =
     </style>
   </head>
   <body>
-    <div class="container-grid blur anim">
+    <div class="container-grid">
       <Header />
       <MainEl class={MainClass}>
         <PortfolioDetails
