--- a/src/components/MetaHead.astro
+++ b/src/components/MetaHead.astro
@@ -30,7 +30,11 @@ const {
   href="https://fonts.googleapis.com/css2?family=Abel&family=Roboto:wght@100&family=Rubik+Glitch&family=Roboto+Mono:wght@100;400&display=swap"
   rel="stylesheet"
 />
-
+<style>
+  a{
+    color: white;
+  }
+</style>
 <!-- Google Tag Manager -->
 <script is:inline>
   (function (w, d, s, l, i) {
