--- a/src/components/Me.astro
+++ b/src/components/Me.astro
@@ -4,8 +4,8 @@ const mepng = "./assets/me.png";
 ---
 
 <div class="me-image">
-  <img src={me} alt="Me" class="me" loading="lazy" width="317" />
-  <img src={mepng} alt="Jech" class="me-png" loading="lazy" width="317" />
+  <img src={me} alt="Me" class="me" width="317" />
+  <img src={mepng} alt="Jech" class="me-png" width="317" />
 </div>
 
 <style lang="scss">
