--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,33 +19,13 @@
     }
   }
 </style>
-<script type="module" src="/app.js"></script>
-<!-- <script defer>
-  window.onload = () => {
-    const anchors = document.querySelectorAll("a");
-    const transition_el = document.querySelector(".anim");
+<script>
+  import Swup from "swup";
+  import SwupA11yPlugin from "@swup/a11y-plugin";
+  import SwupHeadPlugin from "@swup/head-plugin";
+  import SwupSlideTheme from "@swup/slide-theme";
 
-    setTimeout(() => {
-      transition_el.classList.remove("blur");
-    }, 500);
-
-    for (let i = 0; i < anchors.length; i++) {
-      const anchor = anchors[i];
-
-      anchor.addEventListener("click", (e) => {
-        e.preventDefault();
-        let target = e.target;
-
-        if (target.classList.contains("animTrigger")) {
-          transition_el.classList.add("blur");
-
-          setInterval(() => {
-            window.location.href = target;
-          }, 500);
-        } else {
-          window.location.href = target;
-        }
-      });
-    }
-  };
-</script> -->
+  new Swup({
+    plugins: [new SwupA11yPlugin(), new SwupHeadPlugin(), new SwupSlideTheme()],
+  });
+</script>
