--- a/src/components/MetaHead.astro
+++ b/src/components/MetaHead.astro
@@ -1,17 +1,27 @@
 ---
 import "../styles/global.css";
+
+export interface Props {
+  title: string;
+  description: string;
+  canonicalURL?: string;
+}
+
 const {
   title = "Jech | Web Developer and designer",
   description = "My name is Jech and I'm a Freelance Web Developer and designer from the Philippines",
-} = Astro.props;
+  canonicalURL = new URL(Astro.url.pathname, Astro.site),
+} = Astro.props as Props;
 ---
 
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width" />
-<meta name="generator" content={Astro.generator} />
 <title>{title}</title>
 
 <meta name="description" content={description} />
+
+<!-- SEO -->
+<link rel="canonical" href={canonicalURL} />
 
 <!-- Open Graph Tags (Facebook) -->
 <meta property="og:type" content="website" />
@@ -31,7 +41,7 @@ const {
   rel="stylesheet"
 />
 <style>
-  a{
+  a {
     color: white;
   }
 </style>
