--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,7 +18,7 @@
   --c-gray-200: #494949;
   --c-gray-300: #767687;
   --c-gray-400: #a1a1a1;
-  --c-gray-500: #8D8D8D;
+  --c-gray-500: #8d8d8d;
   --c-white: #e2f1f0;
   --c-youtube: #f00;
   --c-dribbble: #ea4c89;
@@ -111,8 +111,15 @@ ul {
   margin: 0;
   padding: 0;
 }
+.transition-fade {
+  transition: 0.4s;
+  opacity: 1;
+}
 
-.anim.blur.main-container{
+html.is-animating .transition-fade {
+  opacity: 0;
+}
+/* .anim.blur.main-container{
   filter: blur(5px) opacity(0);
   transform: translate(0, -10px);
 }
@@ -120,4 +127,4 @@ ul {
   filter: blur(0) opacity(1);
   transform: translate(0, 0);
   transition: transform 300ms, filter 300ms;
-}
+} */
