--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,12 +20,5 @@
   }
 </style>
 <script>
-  import Swup from "swup";
-  import SwupA11yPlugin from "@swup/a11y-plugin";
-  import SwupHeadPlugin from "@swup/head-plugin";
-  import SwupSlideTheme from "@swup/slide-theme";
-
-  new Swup({
-    plugins: [new SwupA11yPlugin(), new SwupHeadPlugin(), new SwupSlideTheme()],
-  });
+  import "../swup/app.js";
 </script>
