--- a/src/components/PortfolioContainer.astro
+++ b/src/components/PortfolioContainer.astro
@@ -2,8 +2,8 @@
 import WorkList from "./WorkList.astro";
 ---
 
-<main class="main-container transition-fade" id="swup">
-  <WorkList />
+<main class="main-container">
+  <WorkList  />
 </main>
 
 <style lang="scss">
