--- a/src/components/Me.astro
+++ b/src/components/Me.astro
@@ -3,7 +3,7 @@ const me = "./assets/me.svg";
 const mepng = "./assets/me.png";
 ---
 
-<div class="me-image">
+<div class="me-image swup-delay-anim" style="animation-delay: var(--delay400)">
   <img src={me} alt="Me" class="me" width="317" />
   <img src={mepng} alt="Jech" class="me-png" width="317" />
 </div>
